--- a/views/post-page.handlebars
+++ b/views/post-page.handlebars
@@ -16,75 +16,36 @@
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
 </head>
 <body class="bg-light">
-    {{!-- <header class="p-3 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center fs-4 mb-2 mb-lg-0 mr-5 text-white text-decoration-none">Reel Insights</a>
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li>
-                        <a href="/" class="nav-link px-4 text-white">Home</a>
-                    </li>
-                    <li>
-                        <a href="/" class="nav-link px-4 text-white">About</a>
-                    </li>
-                    <li>
-                        <button type="button" class="btn btn-primary mx-4" data-toggle="modal" data-target="#exampleModal">
-                            Contact
-                          </button>
-                          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p class="text-dark">Send us a message:</p>
-                                    <form>
-                                          <textarea class="form-control" id="message-text"></textarea>
-                                      </form>
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                    </li>
-                </ul>
-                    <a href="/" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">My Profile</a>
-            </div>
-        </div>
-    </header> --}}
     <main>
         <div class="container">
             <h4 id="post-movie-title">Moonlight (2016)</h4>
         </div>
         <div class="container">
-            <h4 id="username-review">USERNAME's Review</h4>
+            <h4 id="username-review">{{user.username}} Review</h4>
         </div>
         <div class="container">
-            <form>
-                <label for="title">Title:</label><br>
-                <input type="text" id="review-title" name="title" autocomplete="off" value=""><br>
-                <label for="comments">Comments:</label><br>
-                <textarea id="review-comments"></textarea>
-                <label for="score">Score:</label><br>
+            <form id="review-form">
+                <label for="review-title">Title:</label><br>
+                <input type="text" id="review-title" name="title" autocomplete="off" value="" placeholder="Title of Movie"><br>
+                <label for="review-comments">Comments:</label><br>
+                <div>
+                    <textarea id="review-comments" rows="4" cols="50" placeholder="Write your comments here..."></textarea>
+                </div>
+                <label for="review-score">Score:</label><br>
                 <div class="d-flex">
                     <input type="text" id="review-score" name="score" autocomplete="off" value="">
                     <p>/ 10</p>
                 </div>
-            </form>
-            <div>
-                <button class="review-form-button" type="button">Submit review</button>
+                <div>
+                <button class="review-form-button" type="submit">Submit review</button>
                 <button class="cancel-button" type="button">Cancel</button>
-            </div>
+                </div>
+            </form>
         </div>
     </main>
 
 
+<script src="/js/review-post.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
