--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,18 +20,18 @@
 
     
     <main class="container">
-        {{!-- <div class="container" >
+        <div class="container" >
             <form id="search-form">
                 <input type="text" id="title" action="/search-results"  class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
                 <button type="submit"  class="col-12 ml-5 rounded" href="/search-results" justify-content="center">Search</button>
-            </form>  --}}
+            </form> 
 
-
-             {{!-- <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies">
-        </div> --}}
+        </div>
         <div class="container mt-4">
             <div id="results" class="text-center"></div>
         </div>
+
+        {{!-- REVIEWS START --}}
         <div class="container mt-5">
             <div class="row mb-4">
                 <h4 class=" ml-0 pl-0 col-3">Popular Reviews</h4>
@@ -54,7 +54,7 @@
                 </div>  
     </main>
 
-    {{!-- <script src="/js/home-search.js" type="text/javascript"></script> --}}
+     <script src="/js/home-search.js" type="text/javascript"></script> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
