--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
                     </li>
                     <li>
                     {{#if logged_in}}
-                            <button id="logout" class="nav-link px-4 text-white">Logout</button>
+                            <a id="logout" class="nav-link px-4 text-white" href="#">Logout</a>
                         {{else}}
                             <a class="nav-link px-4 text-white" href="/login">Login</a>
                     {{/if}}
